# fakerserver

./: README.md  pyproject.toml
src/http_server/: __init__.py  api_handler.py  cli.py  fake_data.py  server.py
src/http_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
