[project]
name = "http-server"
version = "0.1.0"
description = "A multithreaded REST API for generating fake/mock data for testing and development"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "faker>=37.12.0",
]

[project.scripts]
http-server = "http_server.cli:main"

[tool.uv]
package = true
